# cosmos

./: .gitignore  LICENSE  README.md  agent_handoff.md  catalog_sources.yml  pyproject.toml
.github/workflows/: codex-listener.yml
data/processed/: astrodeep_jwst.parquet  ceers_jwst.parquet
data/raw/: astrodeep_jwst.fits  ceers_jwst.fits
notebooks/: 00_project_overview.ipynb  01_catalog_eda_template.ipynb
outputs/manifests/: astrodeep_jwst_sample_250.manifest.json  astrodeep_jwst_sample_250_01.manifest.json  astrodeep_jwst_sample_250_02.manifest.json  ceers_jwst.manifest.json  ceers_jwst_01.manifest.json  ceers_jwst_02.manifest.json  jades_dr5.manifest.json  jades_dr5_01.manifest.json  jades_dr5_02.manifest.json
outputs/reports/: astrodeep_jwst_sample_vs_full_report.md  ceers_vs_astrodeep_redshift_comparison.md  jades_vs_ceers_vs_astrodeep.md
research/: README.md  questions.md
research/assumptions/: A-001.md  A-002.md  A-003.md  A-004.md  TEMPLATE.md
research/hypotheses/: HYP-001.md  TEMPLATE.md
research/notes/: NOTE-001.md  NOTE-002.md
research/observations/: OBS-001.md  OBS-002.md  OBS-003.md  OBS-004.md  OBS-005.md  OBS-006.md  OBS-007.md  OBS-008.md  TEMPLATE.md
research/patterns/: PAT-001.md  PAT-100.md  TEMPLATE.md
research/questions/: Q-001.md  Q-002.md  Q-003.md  Q-100.md  TEMPLATE.md
research/validations/: TEMPLATE.md  VAL-001.md  VAL-100.md
src/jwst_galaxy_analysis/: __init__.py  cli.py  config.py  datasets.py  io.py  provenance.py  redshift.py  transforms.py
